refactor: clean up controllers, streamline user update, and add exception handler unit tests